--- a/less/modal.less
+++ b/less/modal.less
@@ -2942,7 +2942,7 @@ html[data-theme='dark'] {
 .MuiPopover-root {
   .safety-scan-menu {
     span.header {
-      margin-right: 20px;
+      width: 120px;
     }
     button {
       margin: 0 5px;
