Make Incident, Incident Manager and Threats page to use new Incident form component.

--- a/less/app.less
+++ b/less/app.less
@@ -657,7 +657,10 @@ button.standard:hover:not([disabled]) {
       position: absolute;
       top: -5px;
       right: 0;
-    }    
+    }
+    button:hover:not([disabled]) {
+      background-color: var(--primaryContentBackground);
+    }
   }
   .MuiTableBody-root {
     .flex-item {
