Add column text field for Events query dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2062,7 +2062,7 @@ html[data-theme='dark'] {
       margin-bottom: 15px;
       .severity-level {
         float: left;
-        width: 75%;
+        width: 79%;
         margin-right: 10px;
         .fg-recode {
           float: left;
@@ -2072,17 +2072,25 @@ html[data-theme='dark'] {
         }
         .severity-dropdown {
           float: left;
-          width: 90%;
+          width: 40%;
+          margin-right: 10px;
+        }
+        .add-column {
+          float: left;
+          width: 47%;
         }
       }
       .MuiFormControlLabel-root {
         margin-top: 5px;
       }
+      .soc-script {
+        margin-left: -5px;
+      }
     }
     .period {
       color: var(--primaryContentHeader);
       margin-top: 10px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       .support-text {
         display: inline-block;
         margin-top: 10px;
