--- a/less/app.less
+++ b/less/app.less
@@ -4123,6 +4123,11 @@ button.standard:hover:not([disabled]) {
     .filter {
       margin-bottom: 5px;
     }
+    .undone-task {
+      float: left;
+      width: 48%;
+      margin-right: 10px;
+    }
   }
 }
 #hostHmdAction {
