Complete the arrow options for Scan status in Host page.

--- a/less/app.less
+++ b/less/app.less
@@ -1651,13 +1651,14 @@ button.standard:hover:not([disabled]) {
           background-color: var(--leftTreeGroup);
           .toggle-arrow {
             cursor: pointer;
+            margin-bottom: 2px;
             .arrow {
               float: left;
               width: 25px;
             }
           }
           .option-items {
-            padding-top: 5px;
+            padding: 0 20px;
           }
           .nav-box {
             padding: 2px 5px 5px 10px;
