Re-construct the buttons for Host page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2946,14 +2946,9 @@ html[data-theme='dark'] {
       }
     }
   }
-}
-.MuiPopover-root {
-  .safety-scan-menu {
-    span.header {
-      width: 120px;
-    }
+  &.export {
     button {
       margin: 0 5px;
-    }
+    } 
   }
 }
