Add monthly report export dialog for SOC Incident Management page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2928,6 +2928,35 @@ html[data-theme='dark'] {
     text-align: center;
   }
 }
+#statisticsReportDialog-dialog {
+  .group {
+    display: flex;
+    margin: 10px;
+    &.file-name {
+      margin-bottom: 20px;
+    }
+    &.date-time {
+      input {
+        width: 123px !important;
+        height: 24px;
+      }
+    }
+    label {
+      margin-top: 7px;
+      margin-right: 10px;
+    }
+    .extension {
+      margin-top: 7px;
+      margin-left: 5px;
+    }
+  }
+  footer {
+    text-align: center;
+    .c-info {
+      text-align: right;
+    }
+  }
+}
 .trigger-menu {
   ul li {
     cursor: auto;
