Add Incident Template option for Config Pattern page.

--- a/less/app.less
+++ b/less/app.less
@@ -1868,6 +1868,15 @@ button.standard:hover:not([disabled]) {
       }
     }
     .auto-settings {
+      width: 100%;
+      .btn.btn-group {
+        position: absolute;
+        top: -50px;
+        right: 0;
+        .left-btn {
+          margin-right: 15px;
+        }
+      }
       .generate-topo {
         position: absolute;
         top: 0;
