Update monthly report calendar to show only year and month.

--- a/less/app.less
+++ b/less/app.less
@@ -581,6 +581,11 @@ button.standard:hover:not([disabled]) {
     background-color: var(--buttonSelectedHover);
   }
 }
+.MuiPickersModal-dialogRoot {
+  button:hover:not([disabled]) {
+    color: #fff;
+  }
+}
 .MuiTable-root {
   thead th.MuiTableCell-head {
     button.MuiButtonBase-root {
