--- a/less/app.less
+++ b/less/app.less
@@ -1984,7 +1984,7 @@ button.standard:hover:not([disabled]) {
         overflow: hidden;
         .filter-section,
         .mark-section {
-          .filter-warp,
+          .filter-wrap,
           .mark-wrap {
             padding: 5px 7px;
             & > span {
@@ -2678,6 +2678,35 @@ button.standard:hover:not([disabled]) {
             &.sms-provider {
               margin-top: 10px;
               margin-bottom: 0;
+            }
+            .filter-group {
+              min-width: 485px;
+              margin-top: 10px;
+              margin-left: 5px;
+              .group {
+                margin-top: 2px;
+                margin-bottom: 2px;
+              }
+            }
+            .main-filter-group {
+              .group > div {
+                width: 100%;
+              }
+              .condition-select {
+                width: 25%;
+                margin-right: 3px;
+                text-align: left;
+              }
+              .filter-inputbox {
+                width: 74%;
+                border: 1px solid var(--formInputBorderColor);
+                background-color: var(--dialogFormGroup);
+              }
+              .fg-close,
+              .fg-add,
+              .fg-recode {
+                display: none;
+              }
             }
             .sms-provider {
               width: 100%;
