Add 'view more' dialog to show details CVE info.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2979,3 +2979,16 @@ html[data-theme='dark'] {
     } 
   }
 }
+#showCveDialog-content {
+  width: 1500px;
+  height: 700px;
+  #activeCveInfoButtons {
+    margin: 10px 0;
+  }
+  .main-content {
+    margin: 10px;
+    .vulnerability span {
+      font-weight: bold;
+    }
+  }
+}
