Add notify status switch for Syslog Config page.

--- a/less/app.less
+++ b/less/app.less
@@ -3437,7 +3437,8 @@ button.standard:hover:not([disabled]) {
             font-weight: bold;
             color: var(--primaryContentHeader);
           }
-          .fg-trashcan.host {
+          .fg-trashcan.host,
+          .fg-edit.host {
             float: right;
             font-size: 26px;
             color: var(--primaryTextColor);
