--- a/less/modal.less
+++ b/less/modal.less
@@ -2992,3 +2992,16 @@ html[data-theme='dark'] {
     }
   }
 }
+#configEditHost-content {
+  .group {
+    margin: 10px 0;
+    .notify {
+      float: left;
+      margin-top: 10px;
+      margin-right: 10px;
+    }
+    .switch-control {
+      float: left;
+    }
+  }
+}
