--- a/less/modal.less
+++ b/less/modal.less
@@ -2993,6 +2993,7 @@ html[data-theme='dark'] {
   }
 }
 #configEditHost-content {
+  width: 300px;
   .group {
     margin: 10px 0;
     .notify {
@@ -3002,6 +3003,18 @@ html[data-theme='dark'] {
     }
     .switch-control {
       float: left;
+    }
+  }
+}
+#notifySettingsDialog-content {
+  width: 500px;
+  .notify-settings {
+    .switch-group {
+      display: flex;
+      justify-content: space-between;
+      .service-name {
+        margin-top: 5px;
+      }
     }
   }
 }
