Add pie chart and bar chart for Host Dashboard page.

--- a/less/app.less
+++ b/less/app.less
@@ -1045,6 +1045,9 @@ button.standard:hover:not([disabled]) {
     padding: 6px;
     overflow-y: auto;
     background-color: var(--leftNavBackground);
+    &.host {
+      height: auto;
+    }
     .statistics-content {
       display: flex;
       flex-grow: 12;
