Add host name search for the Host dashboard exposed device tab.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2988,6 +2988,17 @@ html[data-theme='dark'] {
       font-weight: bold;
     }
   }
+  .hostname-search {
+    margin-right: 5px;
+    margin-bottom: 20px;
+  }
+  .hostname-text {
+    margin-top: -5px;
+    margin-bottom: 15px;
+  }
+  .host-btn {
+    margin-top: 1px;
+  }
 }
 #configEditHost-content {
   width: 300px;
