Add search for Host Dashboard page.

--- a/less/app.less
+++ b/less/app.less
@@ -3154,6 +3154,26 @@ button.standard:hover:not([disabled]) {
             }
           }
         }
+        .search-field {
+          position: relative;
+          width: 250px;
+          margin: 15px 0;
+          padding-left: 10px;
+          .search-text {
+            width: 100%;
+            input {
+              width: 78%;
+            }
+          }
+          .fg-close {
+            position: absolute;
+            top: 8px;
+            right: 10px;
+          }
+          .search-count {
+            margin: 15px 0;
+          }
+        }
         .events-syslog-statistics {
           height: 78vh;
           .filter-section {
