--- a/less/modal.less
+++ b/less/modal.less
@@ -2991,9 +2991,8 @@ html[data-theme='dark'] {
   .search-field {
     position: relative;
     width: 250px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    .hostname-search {
+    margin: 15px 0;
+    .search-text {
       width: 100%;
       input {
         width: 78%;
@@ -3004,9 +3003,9 @@ html[data-theme='dark'] {
       top: 8px;
       right: 10px;
     }
-  }
-  .hostname-text {
-    margin-bottom: 15px;
+    .search-count {
+      margin: 15px 0;
+    }
   }
 }
 #configEditHost-content {
