--- a/less/modal.less
+++ b/less/modal.less
@@ -2990,10 +2990,12 @@ html[data-theme='dark'] {
   }
   .search-field {
     position: relative;
-    width: 250px;
+    width: 300px;
     margin: 15px 0;
     .search-text {
-      width: 100%;
+      float: left;
+      width: 70%;
+      margin-right: 5px;
       input {
         width: 78%;
       }
@@ -3001,10 +3003,13 @@ html[data-theme='dark'] {
     .fg-close {
       position: absolute;
       top: 8px;
-      right: 10px;
+      left: 182px;
+    }
+    .search-btn {
+      margin-top: 2px;
     }
     .search-count {
-      margin: 15px 0;
+      margin-top: 15px;
     }
   }
 }
