--- a/less/modal.less
+++ b/less/modal.less
@@ -2940,15 +2940,12 @@ html[data-theme='dark'] {
     }
     &.date-time {
       .date-picker {
-        width: 283px;
+        width: 100%;
+        margin-right: 0;
       }
       input {
         height: 24px;
       }
-    }
-    .extension {
-      margin-top: 7px;
-      margin-left: 5px;
     }
   }
 }
