--- a/less/app.less
+++ b/less/app.less
@@ -3154,29 +3154,39 @@ button.standard:hover:not([disabled]) {
             }
           }
         }
-        .search-field {
-          position: relative;
-          width: 300px;
-          margin: 15px 0;
-          padding-left: 10px;
-          .search-text {
-            float: left;
-            width: 75%;
-            margin-right: 5px;
-            input {
-              width: 78%;
+        .actions-bar {
+          display: flex;
+          justify-content: space-between;
+          .search-field {
+            position: relative;
+            width: 300px;
+            margin: 15px 0;
+            padding-left: 10px;
+            .search-text {
+              float: left;
+              width: 75%;
+              margin-right: 5px;
+              input {
+                width: 78%;
+              }
+            }
+            .fg-close {
+              position: absolute;
+              top: 8px;
+              left: 200px;
+            }
+            .search-btn {
+              margin-top: 2px;
+            }
+            .search-count {
+              margin-top: 15px;
             }
           }
-          .fg-close {
-            position: absolute;
-            top: 8px;
-            left: 200px;
-          }
-          .search-btn {
-            margin-top: 2px;
-          }
-          .search-count {
-            margin-top: 15px;
+          .action-items {
+            margin: 15px;
+            i {
+              cursor: pointer;
+            }
           }
         }
         .events-syslog-statistics {
