--- a/less/modal.less
+++ b/less/modal.less
@@ -3037,6 +3037,45 @@ html[data-theme='dark'] {
   }
 }
 #showFilterQueryDialog-content {
-  width: 700px;
-  height: 500px;
+  width: 500px;
+  .filter-section {
+    input {
+      width: auto;
+    }
+    .group {
+      margin: 20px 0;
+    }
+    .clear-filter {
+      float: right;
+      margin: 5px 0 10px 0;
+    }
+    button:hover:not([disabled]) {
+      background: none;
+    }
+  }
+}
+#dashboardFilterPopover {
+  .content {
+    width: auto;
+    min-width: 300px;
+    padding: 15px 10px 5px 10px;
+    color: var(--chartTextColor);
+    border-bottom: 1px solid var(--primaryBorder);
+    background-color: var(--primaryContentBackground);
+    overflow: hidden;
+    .group {
+      margin-bottom: 10px;
+      textarea,
+      .combo-box {
+        width: 100%;
+      }
+      textarea {
+        padding: 5px;
+      }
+    }
+    .fg-add {
+      color: #fff;
+      background-color: var(--formCheckRadioColor) !important;
+    }
+  }
 }
