Minor code updates.

--- a/less/app.less
+++ b/less/app.less
@@ -3033,13 +3033,17 @@ button.standard:hover:not([disabled]) {
                   &.full {
                     width: 100% !important;
                   }
+                  #obsFile {
+                    & > .group {
+                      //border: 1px solid;
+                    }
+                  }
                   .fg-add, .fg-close {
                     height: 30px;
                     margin-top: 30px;
                   }
                   .event-content {
                     width: 100%;
-                    margin-bottom: -30px;
                     .line {
                       display: flex;
                       width: 100%;
