Complete show CPE dialog for Host Inventory page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2973,10 +2973,12 @@ html[data-theme='dark'] {
     } 
   }
 }
-#showCveDialog-content {
+#showCveDialog-content,
+#showCpeDialog-content {
   width: 1500px;
   height: 700px;
-  #activeCveInfoButtons {
+  #activeCveInfoButtons,
+  #activeCpeInfoButtons {
     margin: 10px 0;
   }
   .main-content {
