Fix bug for Host Dashboard and Inventory pages.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2983,8 +2983,13 @@ html[data-theme='dark'] {
   }
   .main-content {
     margin: 10px;
-    .vulnerability span {
-      font-weight: bold;
+    .vulnerability {
+      li.header {
+        margin-top: 10px;
+      }
+      span {
+        font-weight: bold;
+      }
     }
   }
   .search-field {
