Minor CSS color updates.

--- a/less/app.less
+++ b/less/app.less
@@ -2478,6 +2478,7 @@ button.standard:hover:not([disabled]) {
                   }
                   span.success,
                   span.fail,
+                  span.critical,
                   span.high,
                   span.medium,
                   span.low {
@@ -2496,6 +2497,10 @@ button.standard:hover:not([disabled]) {
                     color: #e15b6b;
                     border: 1px solid #e15b6b;
                   }
+                  span.critical {
+                    color: #000;
+                    border: 1px solid #000;
+                  }
                   span.high {
                     color: #CC2943;
                     border: 1px solid #CC2943;
@@ -2505,8 +2510,8 @@ button.standard:hover:not([disabled]) {
                     border: 1px solid #CC7B29;
                   }
                   span.low {
-                    color: #29CC7A;
-                    border: 1px solid #29CC7A;
+                    color: #7ACC29;
+                    border: 1px solid #7ACC29;
                   }
                 }
               }
