Add more fields and its validatons for TTPS page.

--- a/less/app.less
+++ b/less/app.less
@@ -3056,6 +3056,27 @@ button.standard:hover:not([disabled]) {
                       .group {
                         width: 50%;
                       }
+                      .upload-header {
+                        margin-top: 5px;
+                        margin-right: 10px;
+                      }
+                      .content {
+                        float: left;
+                        width: 76%;
+                      }
+                      .file-input {
+                        input {
+                          width: -webkit-calc(100% - 25px);
+                          width: -moz-calc(100% - 25px);
+                          width: calc(100% - 25px);
+                        }
+                        .fg-close {
+                          margin-top: 2px;
+                        }
+                      }
+                      .upload-btn {
+                        margin-left: 10px;
+                      }
                     }
                     .event-sub {
                       margin-top: 20px;
