--- a/less/app.less
+++ b/less/app.less
@@ -3034,6 +3034,14 @@ button.standard:hover:not([disabled]) {
                 }
               }
               .incident-group {
+                &.edr {
+                  & > .group {
+                    & > .fg-close,
+                    & > .fg-add {
+                      display: none;
+                    }
+                  }
+                }
                 .group {
                   &.full {
                     width: 100% !important;
