Add functionality for sending incident with uploded attachments.

--- a/less/modal.less
+++ b/less/modal.less
@@ -3086,3 +3086,10 @@ html[data-theme='dark'] {
     }
   }
 }
+#sendIncidentDialog-content {
+  min-width: 400px;
+  .msg {
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+}
