Various bugs fix and minor code refacotr for incident pages.

--- a/less/app.less
+++ b/less/app.less
@@ -3063,9 +3063,15 @@ button.standard:hover:not([disabled]) {
                       .group {
                         width: 50%;
                       }
+                      .upload-file {
+                        float: left;
+                        margin-right: 5px;
+                        margin-bottom: 10px;
+                      }
                       .upload-header {
                         margin-top: 5px;
                         margin-right: 10px;
+                        clear: both;
                       }
                       .content {
                         float: left;
