--- a/less/modal.less
+++ b/less/modal.less
@@ -3090,6 +3090,9 @@ html[data-theme='dark'] {
   min-width: 400px;
   .msg {
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+  }
+  .main-table {
+    margin-top: 10px;
   }
 }
