--- a/less/app.less
+++ b/less/app.less
@@ -3202,32 +3202,21 @@ button.standard:hover:not([disabled]) {
           }
         }
         .actions-bar {
-          display: flex;
-          justify-content: space-between;
           .search-field {
-            position: relative;
-            width: 300px;
+            display: flex;
             margin: 15px 0;
             padding-left: 10px;
-            .search-text {
-              float: left;
-              width: 75%;
-              margin-right: 5px;
-              input {
-                width: 78%;
-              }
-            }
-            .fg-close {
-              position: absolute;
-              top: 8px;
-              left: 200px;
+            .group {
+              margin-right: 10px;
             }
             .search-btn {
-              margin-top: 2px;
+              margin-left: 5px;
+              margin-right: 5px;
             }
-            .search-count {
-              margin-top: 15px;
-            }
+          }
+          .search-count {
+            margin-bottom: 15px;
+            padding-left: 10px;
           }
         }
         .events-syslog-statistics {
