--- a/less/login.less
+++ b/less/login.less
@@ -15,6 +15,7 @@ html[data-theme='dark'] {
   width: 100%;
   background: linear-gradient(to top, #001549, #72aaff);
   background-image: url('/SCP/images/scp-bg.jpg');
+  //background-image: url('https://172.18.0.119/SCP/images/scp-bg.jpg');
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -69,6 +70,9 @@ html[data-theme='dark'] {
       &.bottom {
         margin-bottom: 10px;
       }
+    }
+    .captcha-image {
+      margin-left: 10px;
     }
     .caps-lock {
       color: #f44336;
