--- a/less/app.less
+++ b/less/app.less
@@ -4419,10 +4419,11 @@ button.standard:hover:not([disabled]) {
 
 #hostVulnerabilities {
   position: absolute;
-  top: -15px;
+  top: 0;
   right: 0;
   width: 1px;
   height: 1px;
   min-width: 0;
   padding: 0;
+  color: var(--subHeaderBackground);
 }
