Minor CSS updates.

--- a/less/app.less
+++ b/less/app.less
@@ -4417,7 +4417,7 @@ button.standard:hover:not([disabled]) {
   }
 }
 
-#hostVulnerabilities {
+#hostVulnerabilities2 {
   position: absolute;
   top: 0;
   right: 0;
