--- a/less/app.less
+++ b/less/app.less
@@ -4417,13 +4417,13 @@ button.standard:hover:not([disabled]) {
   }
 }
 
-#hostVulnerabilities2 {
+#hostVulnerabilitiesHidden {
   position: absolute;
   top: 0;
   right: 0;
   width: 1px;
   height: 1px;
   min-width: 0;
-  padding: 0;
-  color: var(--subHeaderBackground);
+  padding: 0 !important;
+  color: var(--subHeaderBackground) !important;
 }
