--- a/less/app.less
+++ b/less/app.less
@@ -901,6 +901,7 @@ button.standard:hover:not([disabled]) {
   }
   header.main-header {
     position: relative;
+    min-height: 54px;
     font-size: 1.1em;
     font-weight: bold;
     color: var(--primaryContentHeader);
@@ -1048,10 +1049,35 @@ button.standard:hover:not([disabled]) {
     &.host {
       height: auto;
     }
+    .sub-header {
+      font-weight: bold;
+      color: var(--primaryContentHeader);
+      padding: 15px 15px;
+      background-color: var(--primaryContentBackground);
+    }
     .statistics-content {
       display: flex;
       flex-grow: 12;
       flex-wrap: wrap;
+      &.agent {
+        justify-content: space-evenly;
+        padding: 0px 10px 15px 10px;
+        background-color: var(--primaryContentBackground);
+        .box {
+          font-size: 20px;
+          padding: 15px;
+          text-align: center;
+          min-width: 150px;
+          border-radius: 5px;
+          color: var(--primaryTextColor);
+          background-color: var(--tabMenuHover);
+          border: 1px solid var(--primaryBorder);
+          header {
+            font-weight: bold;
+            margin-bottom: 10px;
+          }
+        }
+      }
       .chart-group {
         width: 49.2%;
         margin: 5px;
