Minor table style fix for Endpoint Overview page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -3047,6 +3047,15 @@ html[data-theme='dark'] {
           right: 0;
           padding: 0 10px;
         }
+        td {
+          vertical-align: top;
+          white-space: pre-wrap;
+          padding: 8px 15px;
+          &.header {
+            width: 25%;
+            border-right: 1px solid var(--primaryBorder);
+          }
+        }
       }
     }
   }
