Wrap json keys instead of using ellipsis.

--- a/less/modal.less
+++ b/less/modal.less
@@ -144,8 +144,8 @@ html[data-theme='dark'] {
       font-weight: bold;
       width: 19%;
       display: inline-block;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      word-wrap: break-word;
+      margin: 0 10px;
     }
     &.value {
       float: left;
