--- a/less/app.less
+++ b/less/app.less
@@ -4083,6 +4083,10 @@ button.standard:hover:not([disabled]) {
           }
           .sub-section {
             width: 100%;
+            font-size: .9em;
+            margin: 5px 0;
+            padding: 5px;
+            text-align: left;
             &.space {
               margin-bottom: 15px;
             }
@@ -4096,7 +4100,7 @@ button.standard:hover:not([disabled]) {
             .time-picker {
               margin-right: 10px;
             }
-            #importHmd {
+            #importHmd, #importMalwareWhiteList {
               float: left;
               width: 32%;
               margin-right: 10px;
