--- a/less/app.less
+++ b/less/app.less
@@ -3906,6 +3906,8 @@ button.standard:hover:not([disabled]) {
           top: 5px;
           right: 0;
           padding: .3em 1em;
+          display: flex;
+          align-items: center;
           &.with-menu {
             right: 70px;
           }
