Use MUI Tooltip to show long contents.

--- a/less/app.less
+++ b/less/app.less
@@ -4492,3 +4492,17 @@ button.standard:hover:not([disabled]) {
   padding: 0 !important;
   color: var(--subHeaderBackground) !important;
 }
+
+.cell-tooltip .MuiTooltip-tooltip {
+  border: 1px solid #3C3C3C;
+  white-space: pre-wrap;
+  max-width: calc(~"100vw - 100px");
+  max-height: calc(~"100vh - 100px");
+  overflow: auto;
+  background-color: #ffffff;
+  color: #3C3C3C;
+  font-weight: normal;
+  z-index: 1000;
+  font-size: 14px;
+  padding: 10px;
+}
