Add file integrity and process monitor filters

--- a/less/modal.less
+++ b/less/modal.less
@@ -3167,7 +3167,7 @@ html[data-theme='dark'] {
   width: 500px;
   .filter-section {
     input {
-      width: 100%;
+      width: auto;
     }
     .group {
       margin: 20px 0;
