--- a/less/app.less
+++ b/less/app.less
@@ -239,6 +239,10 @@ button.standard:hover:not([disabled]) {
   .fg {
     padding: 0px 5px;
   }
+  .next-level {
+    min-width: auto;
+    margin-left: 10px;
+  }
 }
 .c-popover {
   color: var(--primaryTextColor) !important;
@@ -1085,7 +1089,7 @@ button.standard:hover:not([disabled]) {
         }
       }
       .chart-group {
-        width: 32.8%;
+        flex: 1 1 0px;
         margin: 5px;
         border: none;
         border-radius: 5px;
