Add risk level and radar chart.

--- a/less/app.less
+++ b/less/app.less
@@ -695,6 +695,9 @@ button.standard:hover:not([disabled]) {
   }
   .MuiToolbar-root,
   .MuiTablePagination-actions {
+    button {
+      border: 0;
+    }
     button:hover {
       color: #fff;
     }
