Add remote control and compress logs.

--- a/less/modal.less
+++ b/less/modal.less
@@ -3076,6 +3076,8 @@ html[data-theme='dark'] {
     }
     .overview-btn-group {
       margin-bottom: 15px;
+      display: flex;
+      justify-content: space-between;
       button {
         margin-right: 10px;
       }
