Safety Scan Record add export task.

--- a/less/modal.less
+++ b/less/modal.less
@@ -3051,8 +3051,13 @@ html[data-theme='dark'] {
   .search-field {
     display: flex;
     margin-bottom: 15px;
+    justify-content: space-between;
+    height: 40px;
     .group {
+      display: inline-block;
       margin-right: 10px;
+      top: -5px;
+      position: relative;
     }
     .search-btn {
       margin-left: 5px;
