--- a/less/modal.less
+++ b/less/modal.less
@@ -3028,7 +3028,8 @@ html[data-theme='dark'] {
 #showCveDialog-content,
 #showCpeDialog-content,
 #showKbidDialog-content,
-#showEndpointDialog-content {
+#showEndpointDialog-content,
+#showMalwareDialog-content {
   min-width: 1500px;
   min-height: 700px;
   #activeCveInfoButtons,
@@ -3074,7 +3075,18 @@ html[data-theme='dark'] {
     margin-bottom: 15px;
   }
 }
-#showEndpointDialog-content {
+#malware-overview-bar-chart {
+  .center-text {
+    word-spacing: 99999999999px;
+    display: block;
+    align-content: space-around;
+    &:first-line {
+      font-size: 2em;
+      font-weight: bold;
+    }
+  }
+}
+.dialog {
   .overview {
     button:hover:not([disabled]) {
       background: none;
@@ -3090,6 +3102,7 @@ html[data-theme='dark'] {
     .table-data {
       display: flex;
       gap: 20px;
+      margin-top: -25px;
       table {
         border-collapse: separate;
         border: 1px solid var(--primaryBorder);
@@ -3200,6 +3213,7 @@ html[data-theme='dark'] {
 }
 #showFilterQueryDialog-content {
   width: 500px;
+  overflow: hidden;
   .filter-section {
     input {
       width: auto;
